Fix Card alignment

--- a/components/molecules/Card/Card.module.scss
+++ b/components/molecules/Card/Card.module.scss
@@ -9,7 +9,6 @@
   &__top {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     flex-direction: column;
     margin: var(--spacing-xs3) 0;
     margin-bottom: 0;
